3.nginx_routing/3_ingress_https.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: hyun
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: hyun
spec:
  type: ClusterIP
  selector:
    app: my-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  namespace: hyun
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.seunghyun.shop"
    secretName: seunghyun-com-tls
  rules:
  - host: server.seunghyun.shop
    http:
      paths:
      - path: /product-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

      - path: /order-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
